Add increment and decrement logic
